--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "antd": "^4.22.3",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+
     "express.js": "^1.0.0",
+    "nodemon": "^2.0.19",
     "react": "^18.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.1.0",
